--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -21,7 +21,8 @@
         android:textStyle="bold"
         android:typeface="normal"
         android:layout_marginTop="30dp"
-        android:text="Version 0.2"/>
+        android:text="Version 0.2"
+        android:id="@+id/textViewVersion" />
 
     <TextView
         android:layout_width="match_parent"
