--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,9 +15,9 @@
         >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/tx"
+            android:layout_width="163dp"
+            android:layout_height="182dp"
+            android:src="@drawable/tx_logo"
             android:layout_gravity="center"
             android:paddingTop="40dp"
             android:focusable="true"
@@ -28,16 +28,28 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="40dp"
+            android:paddingTop="30dp"
             android:paddingLeft="24dp"
             android:paddingRight="24dp">
+
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:text="Use tx account to sign in"
+                android:textColor="#e4e4e4"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_gravity="center_horizontal" />
+
 
             <!-- Roll Label -->
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/leti"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="8dp">
                 <EditText android:id="@+id/input_roll"
                     android:layout_width="match_parent"
@@ -52,7 +64,7 @@
                 android:id="@+id/lpti"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+
                 android:layout_marginBottom="8dp">
                 <EditText android:id="@+id/input_password"
                     android:layout_width="match_parent"
@@ -66,7 +78,7 @@
                 android:id="@+id/btn_login"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="24dp"
                 android:background="#fff"
                 android:textStyle="bold"
@@ -77,15 +89,17 @@
             <TextView android:id="@+id/link_signup"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:text="No account yet? Create one"
                 android:textColor="#e4e4e4"
                 android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="16dip"/>
 
+
+
         </LinearLayout>
-
-
 
     </LinearLayout>
 </ScrollView>
