--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,9 +12,9 @@
         >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/tx"
+            android:layout_width="179dp"
+            android:layout_height="200dp"
+            android:src="@drawable/tx_logo"
             android:layout_gravity="center"
             android:paddingTop="40dp"
             android:focusable="true"
@@ -70,6 +70,8 @@
                     android:hint="Email" />
             </android.support.design.widget.TextInputLayout>
 
+
+
             <!-- Password Label -->
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -105,9 +107,12 @@
                     android:layout_width="wrap_content"
                     android:textColor="#fff"
                     android:layout_height="wrap_content"
+                    android:shadowColor="#fff"
                     android:text="Female"
                     android:id="@+id/female"/>
             </RadioGroup>
+
+
 
             <!-- Hostel male Label -->
             <LinearLayout
@@ -165,8 +170,21 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#fff"
-                        android:text="PG"
-                        android:id="@+id/pg"/>
+                        android:text="K"
+                        android:id="@+id/k"/>
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#fff"
+                        android:text="L"
+                        android:id="@+id/l"/>
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#fff"
+                        android:text="FRC"
+                        android:id="@+id/FRC"/>
+
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -186,7 +204,7 @@
                 android:visibility="gone">
                 <TextView android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="#372c24"
+                    android:textColor="#e4e4e4"
                     android:text="Hostel"
                     android:layout_marginTop="15dp"/>
                 <RadioGroup
@@ -215,54 +233,132 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#fff"
-                        android:text="FRC"
-                        android:id="@+id/frc"/>
+                        android:text="PG"
+                        android:id="@+id/pg"/>
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:textColor="#fff"
                         android:layout_height="wrap_content"
                         android:text="Other"
                         android:id="@+id/noneFemale"/>
+
                 </RadioGroup>
             </LinearLayout>
 
-            <!--  Branch Label -->
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
+            <!--Year Label -->
+            <TextView android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp">
-                <!--<EditText android:id="@+id/input_branch"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:inputType="textCapCharacters"-->
-                    <!--android:textColor="#fff"-->
-                    <!--android:hint="Branch Code" />-->
+                android:textColor="#e4e4e4"
+                android:text="Year of passing"
+                android:layout_marginTop="15dp"/>
+            <Spinner
+                android:id="@+id/year"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
 
-                <AutoCompleteTextView
-                    android:id="@+id/input_branch"
-                    android:layout_width="match_parent"
+            <!--2018 batch -->
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:id="@+id/year_18"
+                android:visibility="gone">
+            <TextView android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#e4e4e4"
+                android:text="Branch"
+                android:layout_marginTop="15dp"/>
+            <Spinner
+                android:id="@+id/year_2018_branch"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                />
+
+                <TextView android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textCapCharacters"
-                    android:textColor="#fff"
-                    android:hint="Branch Code" />
-            </android.support.design.widget.TextInputLayout>
+                    android:textColor="#e4e4e4"
+                    android:text="Batch Code"
+                    android:layout_marginTop="15dp"/>
+                <Spinner
+                    android:id="@+id/year_2018_batch"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    />
+                </LinearLayout>
 
-
-            <!-- YEar Label -->
-            <TextView
-                android:layout_width="match_parent"
+            <!--2019 batch -->
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#fff"
-                android:text="Batch of"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="4dp"/>
+                android:orientation="vertical"
+                android:id="@+id/year_19"
+                android:visibility="gone">
+                <TextView android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#e4e4e4"
+                    android:text="Branch"
+                    android:layout_marginTop="15dp"/>
+                <Spinner
+                    android:id="@+id/year_2019_branch"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#e4e4e4"
+                    android:text="Batch Code"
+                    android:layout_marginTop="15dp"/>
+                <Spinner
+                    android:id="@+id/year_2019_batch"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
 
-            <NumberPicker
-                android:id="@+id/reg_year"
-                android:layout_width="100dp"
+            <!--2020 batch -->
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"/>
+                android:orientation="vertical"
+                android:id="@+id/year_20"
+                android:visibility="gone">
+                <TextView android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#e4e4e4"
+                    android:text="Branch"
+                    android:layout_marginTop="15dp"/>
+                <Spinner
+                    android:id="@+id/year_2020_branch"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    />
+
+                <TextView android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#e4e4e4"
+                    android:text="Batch Code"
+                    android:layout_marginTop="15dp"/>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    >
+                <Spinner
+                    android:id="@+id/year_2020_batch_1"
+                    android:layout_width="229dp"
+                    android:layout_height="wrap_content"
+                    />
+
+                    <Spinner
+                    android:id="@+id/year_2020_batch_2"
+                    android:layout_width="100dp"
+                    android:layout_height="65dp"
+                     />
+                </LinearLayout>
+            </LinearLayout>
+
+
 
             <!-- Phone Label -->
             <android.support.design.widget.TextInputLayout
