--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,6 +31,7 @@
         android:background="@android:color/darker_gray"
         android:layout_margin="9dp"/>
 
+
     <ListView
         android:id="@+id/listUpdates"
         android:layout_width="fill_parent"
@@ -41,4 +42,4 @@
         android:layout_below="@id/line2"
         android:layout_margin="9dp"/>
 
-</RelativeLayout>
+</LinearLayout>
