--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -3,31 +3,52 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/head"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:orientation="vertical"
-        android:background="@color/lightPrimary">
+        android:background="@color/lightPrimary"
+        >
+
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profile_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="15dp"
+            android:src="@drawable/ic_profile"
+            app:border_color="#FF000000"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="39dp"
+            android:layout_alignBottom="@+id/roll" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Ayush Pahwa"
+            android:layout_marginLeft="24dp"
+            android:text="Alok Singh"
             android:textColor="#fff"
-            android:paddingLeft="20dp"
+            android:gravity="left"
+            android:paddingBottom="4dp"
             android:paddingTop="75dp"
-            android:id="@+id/name" />
+            android:id="@+id/name"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/profile_image" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="101412011"
+            android:text="101506021"
+            android:gravity="left"
             android:textColor="#fff"
-            android:paddingLeft="20dp"
-            android:id="@+id/roll" />
-    </LinearLayout>
+            android:id="@+id/roll"
+            android:layout_below="@+id/name"
+            android:layout_alignStart="@+id/name" />
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/drawerList"
