--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:weightSum="1">
@@ -38,21 +39,19 @@
     </RadioGroup>
 
     <EditText
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:paddingBottom="100dp"
-        android:paddingLeft="10dp"
-        android:layout_marginTop="60dp"
         android:inputType="textMultiLine"
-        android:lines="5"
-        android:textColorHint="#999999"
-        android:hint="Write your feedback here !"
-        android:background="#fff"
-        android:layout_width="fill_parent"
-        android:layout_height="100dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:lines="8"
         android:id="@+id/feedback_box"
-        android:layout_weight="0.18" />
+        android:minLines="6"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
+        android:gravity="top|left"
+        android:background="#fff"
+        android:maxLines="10"
+        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:scrollbars="vertical"
+        />
 
     <android.support.v7.widget.AppCompatButton
     android:id="@+id/btn_login"
