--- a/app/src/main/res/layout/nav_drawer_row.xml
+++ b/app/src/main/res/layout/nav_drawer_row.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/icon"
-        android:paddingLeft="15dp"
+        android:paddingLeft="16dp"
         android:src="@drawable/ic_home_grey600_24dp"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
@@ -17,14 +17,17 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
+        android:paddingLeft="32dp"
         android:text="Pappu"
-        android:textColor="@color/colorPrimary"
-        android:paddingTop="11dp"
-        android:paddingBottom="11dp"
-        android:textSize="16sp"
+        android:textColor="#333"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:textSize="15sp"
         android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/icon" />
+        android:layout_toEndOf="@+id/icon"
+        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
+        android:textIsSelectable="false"
+        android:textStyle="bold" />
 
 
 
