--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -15,7 +15,7 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapse_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="256dp"
+            android:layout_height="230dp"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
@@ -24,18 +24,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary"
-                app:layout_collapseMode="parallax">
+                app:layout_collapseMode="parallax"
+                >
 
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+
+                <com.mikhaellopez.circularimageview.CircularImageView
                     android:id="@+id/profile_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginStart="24dp"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+
                     android:src="@drawable/ic_profile"
-                    app:border_color="#FF000000" />
+                    android:layout_gravity="center_horizontal"
+                    app:civ_border_color="#EEEEEE"
+                    app:civ_border_width="3dp"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true" />
             </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
@@ -69,11 +72,19 @@
                 android:layout_marginTop="15dp"
                 android:elevation="2dp">
 
+
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        >
+                    </RelativeLayout>
 
 
                     <RelativeLayout
@@ -153,6 +164,8 @@
                             android:textAppearance="?android:attr/textAppearanceMedium"
                             android:visibility="visible"/>
 
+
+
                         <TextView
                             android:id="@+id/userDetailsEmail"
                             android:layout_width="wrap_content"
@@ -163,7 +176,7 @@
                             android:layout_marginBottom="15dp"
                             android:layout_marginLeft="30dp"
                             android:layout_marginStart="30dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="15dp"
                             android:text="Email"
                             android:textAppearance="?android:attr/textAppearanceMedium"
                             android:visibility="visible"/>
@@ -173,11 +186,98 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="University"
+                            android:layout_marginBottom="15dp"
                             android:textAppearance="?android:attr/textAppearanceMedium"
                             android:layout_below="@+id/userDetailsEmail"
                             android:layout_alignLeft="@+id/userDetailsEmail"
                             android:layout_alignStart="@+id/userDetailsEmail"
                             android:visibility="visible"/>
+
+                        <TextView
+                            android:id="@+id/userDetailsRollNumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Roll Number"
+                            android:layout_marginBottom="15dp"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:layout_below="@+id/userDetailsUniversity"
+                            android:layout_alignLeft="@+id/userDetailsUniversity"
+                            android:layout_alignStart="@+id/userDetailsUniversity"
+                            android:visibility="visible"/>
+
+                        <TextView
+                            android:id="@+id/userDetailsHostel"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Hostel"
+                            android:layout_marginBottom="15dp"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:layout_below="@+id/userDetailsRollNumber"
+                            android:layout_alignLeft="@+id/userDetailsRollNumber"
+                            android:layout_alignStart="@+id/userDetailsRollNumber"
+                            android:visibility="visible"/>
+
+                        <TextView
+                            android:id="@+id/userDetailsHostelRoomNumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Room Number"
+                            android:layout_marginBottom="15dp"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:layout_below="@+id/userDetailsHostel"
+                            android:layout_alignLeft="@+id/userDetailsHostel"
+                            android:layout_alignStart="@+id/userDetailsHostel"
+                            android:visibility="visible"/>
+
+                        <TextView
+                            android:id="@+id/userDetailsYear"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Year of passing"
+                            android:layout_marginBottom="15dp"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:layout_below="@+id/userDetailsHostelRoomNumber"
+                            android:layout_alignLeft="@+id/userDetailsHostel"
+                            android:layout_alignStart="@+id/userDetailsHostel"
+                            android:visibility="visible"/>
+
+                        <TextView
+                            android:id="@+id/userDetailsPhoneNumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Phone Number"
+                            android:layout_marginBottom="15dp"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:layout_below="@+id/userDetailsYear"
+                            android:layout_alignLeft="@+id/userDetailsHostel"
+                            android:layout_alignStart="@+id/userDetailsHostel"
+                            android:visibility="visible"/>
+
+                        <TextView
+                            android:id="@+id/userDetailsBranch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Branch"
+                            android:layout_marginBottom="15dp"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:layout_below="@+id/userDetailsPhoneNumber"
+                            android:layout_alignLeft="@+id/userDetailsHostel"
+                            android:layout_alignStart="@+id/userDetailsHostel"
+                            android:visibility="visible"/>
+
+                        <TextView
+                            android:id="@+id/userDetailsBatchCode"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Batch"
+                            android:layout_marginBottom="15dp"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:layout_below="@+id/userDetailsBranch"
+                            android:layout_alignLeft="@+id/userDetailsHostel"
+                            android:layout_alignStart="@+id/userDetailsHostel"
+                            android:visibility="visible"/>
+
+
 
 
                         <!-- Full Name Label -->
@@ -219,6 +319,10 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:hint="Email"
+                                android:clickable="false"
+                                android:cursorVisible="false"
+                                android:focusable="false"
+                                android:focusableInTouchMode="false"
                                 android:textColorHint="#000000"
                                 android:inputType="textEmailAddress"
                                 android:visibility="gone" />
@@ -447,4 +551,4 @@
     </android.support.v4.widget.NestedScrollView>
 
 
-    </android.support.design.widget.CoordinatorLayout>
+</android.support.design.widget.CoordinatorLayout>
