--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
+    android:background="#fff"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true"
     android:fitsSystemWindows="true">
@@ -15,11 +15,11 @@
         >
 
         <ImageView
-            android:layout_width="163dp"
-            android:layout_height="182dp"
-            android:src="@drawable/tx_logo"
+            android:layout_width="match_parent"
+            android:layout_height="197dp"
+            android:src="@drawable/cb_logo"
             android:layout_gravity="center"
-            android:paddingTop="40dp"
+            android:paddingTop="20dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             />
@@ -37,9 +37,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:text="Use tx account to sign in"
-                android:textColor="#e4e4e4"
+                android:text="Use CampusBOX account to sign in"
+                android:textColor="@color/textColorPrimary"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_gravity="center_horizontal" />
 
@@ -49,13 +48,14 @@
                 android:id="@+id/leti"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="8dp">
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="8dp"
+                android:theme="@style/TextLabel">
                 <EditText android:id="@+id/input_roll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
-                    android:textColor="#fff"
+                    android:textColor="@color/textColorPrimary"
                     android:hint="Roll Number" />
             </android.support.design.widget.TextInputLayout>
 
@@ -64,13 +64,14 @@
                 android:id="@+id/lpti"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:layout_marginBottom="8dp">
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="8dp"
+                android:theme="@style/TextLabel">
                 <EditText android:id="@+id/input_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
-                    android:textColor="#fff"
+                    android:textColor="@color/textColorPrimary"
                     android:hint="Password"/>
             </android.support.design.widget.TextInputLayout>
 
@@ -80,9 +81,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="24dp"
-                android:background="#fff"
+                android:background="@color/colorPrimary"
                 android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="#fff"
                 android:padding="12dp"
                 android:text="Login"/>
 
@@ -92,7 +93,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:text="No account yet? Create one"
-                android:textColor="#e4e4e4"
+                android:textColor="@color/textColorPrimary"
                 android:gravity="center"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="16dip"/>
