--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,18 +34,18 @@
 
     <style name="TextLabel" parent="TextAppearance.AppCompat">
 
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/textColorPrimary</item>
+        <item name="colorPrimaryDark">@color/textColorPrimary</item>
         <item name="android:windowTranslucentStatus">true</item>
 
         <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">#fff</item>
+        <item name="android:textColorHint">@color/textColorPrimary</item>
         <item name="android:textSize">20sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
-        <item name="colorAccent">#e4e4e4</item>
-        <item name="colorControlNormal">#e4e4e4</item>
-        <item name="colorControlActivated">#fff</item>
-        <item name="colorControlHighlight">#fff</item>
+        <item name="colorAccent">@color/textColorPrimary</item>
+        <item name="colorControlNormal">@color/textColorPrimary</item>
+        <item name="colorControlActivated">@color/textColorPrimary</item>
+        <item name="colorControlHighlight">@color/textColorPrimary</item>
     </style>
 
 
