--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:orientation="vertical"
-        android:background="@color/lightPrimary"
+        android:background="@color/colorPrimary"
         >
 
 
@@ -22,7 +22,8 @@
             app:border_color="#FF000000"
             android:layout_marginStart="22dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,7 +37,8 @@
             android:paddingTop="65dp"
             android:id="@+id/name"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/profile_image" />
+            android:layout_toEndOf="@+id/profile_image"
+            android:layout_toRightOf="@+id/profile_image" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +49,8 @@
             android:textColor="#fff"
             android:id="@+id/roll"
             android:layout_below="@+id/name"
-            android:layout_alignStart="@+id/name" />
+            android:layout_alignStart="@+id/name"
+            android:layout_alignLeft="@+id/name" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -62,7 +65,8 @@
             android:id="@+id/see_profile"
             android:layout_below="@+id/roll"
             android:layout_alignStart="@+id/profile_image"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_alignLeft="@+id/profile_image" />
 
     </RelativeLayout>
 
