--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,6 @@
     <color name="info">#88b7cd</color>
     <color name="warning">#f7c491</color>
     <color name="danger">#ce807e</color>
-    <color name="lightPrimary">#3b4a59</color>
+    <color name="lightPrimary">#BBDEFB</color>
     <color name="GrayLight">#d3d3d3</color>
 </resources>
